// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppRoot should accept regular element attributes 1`] = `
<div
  className="app-root my-class"
  style={
    Object {
      "paddingBottom": undefined,
      "paddingTop": undefined,
    }
  }
/>
`;

exports[`AppRoot should apply classes for fixed nav bar and sticky footer 1`] = `
<div
  className="app-root has-sticky-footer has-fixed-nav-bar"
  style={
    Object {
      "paddingBottom": undefined,
      "paddingTop": undefined,
    }
  }
/>
`;

exports[`AppRoot should apply padding for fixed nav bar and sticky footer 1`] = `
<div
  className="app-root has-sticky-footer has-fixed-nav-bar"
  style={
    Object {
      "paddingBottom": 100,
      "paddingTop": 50,
    }
  }
/>
`;

exports[`AppRoot should match snapshot 1`] = `
<div
  className="app-root"
  style={
    Object {
      "paddingBottom": undefined,
      "paddingTop": undefined,
    }
  }
/>
`;
